[tool.poetry]
name = "labsrestful"
version = "0.1.0"
description = ""
authors = ["michkail <michkail@sateknologi.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2"
python-dotenv = "^1.0.0"
psycopg-binary = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
